--- a/style.css
+++ b/style.css
@@ -8,3 +8,14 @@
     height: 64px;
     margin: 1em;
 }
+
+.github-corner {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.github-corner img {
+    width: 7em;
+    height: 7em;
+}
